--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -14,6 +14,17 @@ html(lang="en")
         
         main 
             h2 Welcome to Clone Coding 
-            button Call
+
+            h3#nickname(display="none")
+
+            ul
+
+            form#nick-form
+                input(type="text", placeholder="nickname", require)
+                button 설정
+
+            form#msg-form
+                input(type="text", placeholder="write a message", require)
+                button 전송
             
         script(src="/public/js/init.js") 
