--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -20,6 +20,9 @@ html(lang="en")
                     strong 방 이름:
                     input#roomname(type="text", placeholder="방이름을 입력하세요", required)
                     button(type="submit") Enter Room
+                
+                h4 현재 방 목록:
+                ul#room_list
             
             div#room(style="display:none")
                 h3
