--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -6,33 +6,63 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Zoom Clone
 
+        <script src="https://kit.fontawesome.com/5cc2b7f9ba.js" crossorigin="anonymous"></script>
         //- html기본요소들에 스타일입혀줌
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body
-        header
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous")
+        link(rel="stylesheet", href="../public/css/main.css")
+    body(class="container")
+        header(class="text-center m-4")
             h1 Clone Coding 
-        
+            div(class="row")
+                p
+                button(type="submit" class="change-nick btn btn-primary btn-sm col-3 mx-auto" style="display:none") 닉네임 변경
         main
-            div#welcome
+            div#nick
                 form 
-                    strong 닉네임:
-                    input#nickname(type="text", placeholder="닉네임을 입력하세요", required)
-                    strong 방 이름:
-                    input#roomname(type="text", placeholder="방이름을 입력하세요", required)
-                    button(type="submit") Enter Room
-                
+                    div(class="mb-3 form-floating")
+                        input#nickname(type="text", class="form-control" placeholder="닉네임을 입력하세요" aria-descrivedby="nicknameHelp" autofocus required)
+                        label(for="nickname" class="") 닉네임
+                    div(class="row")
+                        button(type="submit" class="btn btn-primary mb-3 mx-auto" style="width:150px") 닉네임 설정
+
+            div#welcome(style="display:none")
+                form     
+                    div(class="mb-3 form-floating")
+                        input#roomname(type="text", class="form-control" placeholder="방이름을 입력하세요" aria-descrivedby="roomnameHelp" required)
+                        label(for="roomname" class="") 방이름
+                    div(class="row")
+                        button(type="submit" class="btn btn-primary mb-3 col-3 mx-auto") Enter Room
+                hr
                 h4 현재 방 목록:
-                ul#room_list
+                table#room_list(class="table table-hover")
+                    thead 
+                        tr 
+                            th(scope="col") No.
+                            th(scope="col") 방이름
+                            th(scope="col") 참여자 수
+                    tbody(class="table-group-divider") 
+                        
             
             div#room(style="display:none")
-                h3
+                div(class="mb-4")
+                    button(onclick="showRoomList()" class="btn btn-danger float-end") 나가기
+                    h3
 
-                ul 
- 
-                form
-                    input#msg(type="text", placeholder="메세지를 입력하세요", required)
-                    button 전송
+                div(class="m-3")
+                    div#chat_list
+    
+                    //- class="fixed-bottom"
+                    form
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="메세지를 입력하세요" aria-label="Recipient's username" aria-describedby="button-addon2" required>
+                            <button class="btn btn-primary col-2" type="submit" id="button-addon2" style="width: 100px">
+                            <i class="fa-sharp fa-regular fa-message"></i></button>
+                        </div>
+                        //- input#msg(type="text", placeholder="메세지를 입력하세요", required)
+                        //- button 전송
             
 
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous")
+        script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/init.js")
